--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "webpack": "webpack --mode development --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^7.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13",
+    "mongoose": "^5.11.14",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0"
   }
 }
